--- a/_talks/2019-04-23-talk-2.md
+++ b/_talks/2019-04-23-talk-2.md
@@ -2,10 +2,10 @@
 title: "Talk 2 on Relevant Topic in Your Field"
 collection: talks
 type: "Talk"
-permalink: /talks/2014-02-01-talk-2
+permalink: /talks/2014-04-23-talk-2
 venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+date: 2014-04-23
+location: "Beijing, China"
 ---
 
 [More information here](http://example2.com)
